--- a/Home/queryservice/pom.xml
+++ b/Home/queryservice/pom.xml
@@ -15,6 +15,7 @@
 	<description>Query service project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<full-artifact-name>target/${project.artifactId}-${project.version}.jar</full-artifact-name>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,6 +76,22 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>3.0.4</version>
+				<configuration>
+					<appName>queryservice-v1</appName>
+					<includeTarget>false</includeTarget>
+					<includes>
+						<include>${basedir}/${full-artifact-name}</include>
+					</includes>
+					<jdkVersion>11</jdkVersion>
+					<processTypes>
+						<web>java $JAVA_OPTS -Dserver.port=$PORT -jar ${full-artifact-name}</web>
+					</processTypes>
 				</configuration>
 			</plugin>
 		</plugins>
